# Casspir

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
src/: Makefile.am  Map.cc  Map.hh  Solver.cc  Solver.hh  casspir.cc  casspir.hh  definitions.hh
test/: Makefile.am  check-convenience-flipper.cc  check-easy-solve.cc  check-first-flip.cc  check-generate-puzzles.cc  check-hard-solve.cc  check-map-print.cc  check-mine-flip.cc
